[project]
name = "2026-02-13t11-32-37z"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "nico2-lib",
    "polars>=1.38.1",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.11",
]

[tool.uv.sources]
nico2-lib = { git = "https://github.com/gruenlab/bioinfo-tools.git", subdirectory = "applications/nico2_lib", rev = "e61ba36e4db5183ef3faad9e1ef11b228bc053f9" }
